--- a/src/app/admin-companies/admin-companies.component.html
+++ b/src/app/admin-companies/admin-companies.component.html
@@ -43,7 +43,7 @@
             <tr *ngFor="let company of companies">
                 
                 <td>{{ company.name }}</td>
-                <td>{{ company.email }}</td>
+                <td>{{ company.email }}<span class="badge badge-info" style="margin-left: 5px;" *ngIf="isNew(company.dateInscription )"> Nouveau</span></td>
                 <td>{{ company.dateInscription| date: 'dd MMM yyyy'  }}</td>
                 <td><i style="color: red;" class="bx bx-x-circle" *ngIf="!company.enabled" ></i>
                     <i style="color: green;" class="bx bx-check-circle" *ngIf="company.enabled" ></i>
