--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -85,6 +85,15 @@
                                     </ul>
                                 </div>
                             </div>
+                            <div class="card user-info-box mb-30">
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <h3>Avis</h3>
+                                </div>
+
+                                <div class="card-body">
+           
+                                </div>
+                            </div>
 
                             <div class="card user-about-me-box mb-30" *ngIf="userProfile.bio">
                                 <div class="card-header d-flex justify-content-between align-items-center">
