refactor: Update navbar component to use lazy loading for profile image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
   ======================================================== -->
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="height: 60px; background-color: darkblue;">
-  <a class="navbar-brand" href="#"><h2 style="color:white;">Assistline</h2></a>
+  <a class="navbar-brand" href="#" style="margin-left:25px"><h2 style="color:white;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Assistline</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
