--- a/src/app/list-offers-visitor/list-offers-visitor.component.html
+++ b/src/app/list-offers-visitor/list-offers-visitor.component.html
@@ -9,14 +9,19 @@
   <!-- Favicons -->
   <link href="assets/homepage/img/favicon.png" rel="icon">
   <link href="assets/homepage/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 
-
+<style>
+    .leaflet-control-container .leaflet-routing-container-hide .leaflet-bottom .leaflet-right .leaflet-routing-container{
+        display: none;
+    }
+    
+</style>
 </head>
 
 <body>
@@ -102,8 +107,9 @@
             <div class="user-info">
                 <img [src]="offer.picture" alt="Profile Image" class="rounded-circle" style="width: 30px; height: 30px;">
                 <span style="color: black;margin-top:5px;margin-left:5px" ><h6>{{ offer.username }}</h6></span>
+                <br><small style="margin-left: 30px;margin-bottom:15px;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">{{offer.creationDate | date : 'dd MMM yyyy'}}</small>
             </div>
-            <br>
+            <hr>
             <div class="card-header d-flex justify-content-between align-items-center">
                 
                 <h3>{{offer.title}}</h3>
@@ -121,14 +127,13 @@
                 </div>
             </div>
 
-            <div class="card-body" style="margin-top: -20px;">
-                <p><b>Description: </b>{{offer.description}}
+            <div class="card-body" style="margin-top: -20px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
+                <p>{{offer.description}}
                    <br>
-                   <b>Itineraire: </b> {{offer.itinerary}}
-                   <br> 
-                   <b>Volume: </b> {{offer.volume}} (m3)<br>
-                   <b>Date depart: </b>Le {{ offer.depart_date }}<br>
-                   <b>Date arrivé: </b>Le {{offer.arrival_date }}<br>
+                  <small> <b>Départ: </b> {{offer.origin}}<br>
+                     <b>Destination: </b> {{offer.destination}}<br>
+                   <b>Date départ: </b>Le {{offer.depart_date | date :'yyyy-MM-dd '}}<br>
+                   <b>Date arrivée: </b>Le {{offer.arrival_date | date :'yyyy-MM-dd '}}<br></small>
 
                 </p>
                 
