--- a/src/app/offer-list/offer-list.component.html
+++ b/src/app/offer-list/offer-list.component.html
@@ -7,7 +7,11 @@
 
     <link rel="icon" type="image/png" src="../../assets/img/favicon.png">
 
-    
+    <style>
+        .leaflet-control-container .leaflet-routing-container-hide .leaflet-bottom .leaflet-right .leaflet-routing-container{
+            display: none;
+        }
+    </style>
  
     
 </head>
