feat: Add reset password functionality
The code changes include adding a new component, `ResetPasswordComponent`, and updating the routing module to include a route for the component. This allows users to reset their password if they have forgotten it.

--- a/src/app/demande-list/demande-list.component.html
+++ b/src/app/demande-list/demande-list.component.html
@@ -3,7 +3,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Your Title Here</title>
+    <title>Assistline</title>
     <link rel="icon" type="image/png" src="../../assets/img/favicon.png">
 </head>
 <body>
