refactor: Update API URL to use HTTP protocol for backend

--- a/src/app/avis/avis.component.html
+++ b/src/app/avis/avis.component.html
@@ -69,7 +69,7 @@
                     <td>{{ f.company_email }}</td>
                     <td>{{ f.client_email }}</td>
                     <td><div class="truncate">{{ f.comment }}</div></td>
-                    <td><button type="button" class="btn btn-danger" (click)="deleteReport(f)"><i class="bx bxs-trash"></i>Supprimer</button><button type="button" class="btn btn-primary" style="margin-left:10px" data-toggle="modal" data-target="#avisModal" (click)="selectFeedback(f.comment)"><i class="bx bx-show" style="margin-right: 5px;" ></i>Afficher</button><button class="btn btn-secondary" style="margin-left:10px"><i class="bx bx-low-vision" style="margin-right: 5px;"></i> Ignorer</button></td>
+                    <td><button type="button" class="btn btn-danger" (click)="deleteReport(f)"><i class="bx bxs-trash"></i>Supprimer</button><button type="button" class="btn btn-primary" style="margin-left:10px" data-toggle="modal" data-target="#avisModal" (click)="selectFeedback(f.comment)"><i class="bx bx-show" style="margin-right: 5px;" ></i>Afficher</button><button class="btn btn-secondary" (click)="ignoreFeedback(f.id)" style="margin-left:10px"><i class="bx bx-low-vision" style="margin-right: 5px;"></i> Ignorer</button></td>
                    
                        
                            
