--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -131,7 +131,7 @@
                             <ul class="profile-nav p-0 pt-3">
                                 <li class="nav-item">
                                     <a href="/profile" class="nav-link">
-                                        <i class='bx bx-user'></i> <span>Profile</span>
+                                        <i class='bx bx-user'></i> <span>Profil</span>
                                     </a>
                                 </li>
                 
@@ -143,7 +143,7 @@
                             <ul class="profile-nav">
                                 <li class="nav-item">
                                     <a href="/login" (click)="authService.logout()" class="nav-link">
-                                        <i class='bx bx-log-out'></i> <span>Logout</span>
+                                        <i class='bx bx-log-out'></i> <span>se déconnecter</span>
                                     </a>
                                 </li>
                             </ul>
