--- a/src/app/profile-details/profile-details.component.html
+++ b/src/app/profile-details/profile-details.component.html
@@ -8,6 +8,36 @@
 
     <title>User Profile</title>
     <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
+    <style>
+        .report:hover{
+            color: red;
+            width: 20px;
+            height:20px
+        }
+        .checked {
+            color: orange;
+        }
+
+        .profile-rating {
+            display: flex;
+            align-items: center;
+        }
+
+        .profile-rating img {
+            margin-right: 10px; /* Adjust the value as needed */
+            width:30px; /* Adjust the value as needed */
+            height: 30px; /* Adjust the value as needed */
+            border-radius: 50%; /* To make the image circular */
+        }
+
+        .profile-rating h6 {
+            margin: 0 10px 0 0; /* Adjust the value as needed */
+        }
+
+        .profile-rating .fa-star {
+            margin-right: 3px; /* Adjust the value as needed */
+        }
+    </style>
 </head>
 
 <body>
@@ -40,6 +70,7 @@
                     </ul>
                 </div>
             </div>
+           
 
             <div class="row">
                 <div class="col-lg-9">
@@ -73,6 +104,27 @@
                                             </li>
 
                                     </ul>
+                                </div>
+
+                              
+                            </div>
+                            <div class="card user-info-box mb-30" *ngIf="avis" >
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <h3>Avis</h3>
+                                </div>
+                
+                                <div class="card-body">
+                                    <div name="rating" *ngFor="let feedback of feedbacks" >
+                                    <div class="profile-rating">
+                                       <img [src]="feedback.client_image" alt="Profile Image"> 
+                                       <h6><b>{{feedback.client_display_name}}</b></h6>
+                                       <span *ngFor="let star of getStarsArray(feedback.star)" class="fa fa-star checked"></span>
+                                       <span *ngFor="let empty of getEmptyStarsArray(feedback.star)" class="fa fa-star"></span>
+                                    
+                                    </div>
+                                    <p style="margin-left:40px;">{{feedback.comment}}   <small style="margin-left: 5px;">    {{feedback.timestamp | date }}</small></p>  
+                                <br>
+                                </div>
                                 </div>
                             </div>
 
