--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -116,13 +116,13 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="card user-info-box mb-30">
+                            <div class="card user-info-box mb-30" *ngIf="avis" >
                                 <div class="card-header d-flex justify-content-between align-items-center">
                                     <h3>Avis</h3>
                                 </div>
 
                                 <div class="card-body">
-                                    <div name="rating" *ngFor="let feedback of feedbacks">
+                                    <div name="rating" *ngFor="let feedback of feedbacks" >
                                     <div class="profile-rating">
                                        <img [src]="feedback.client_image" alt="Profile Image"> 
                                        <h6><b>{{feedback.client_display_name}}</b></h6>
